<resources>
    <string name="app_name">GphyTest</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="gphyquizz">GphyQuizz</string>
    <string name="question">Question?</string>
    <string name="exit">Exit</string>
    <string name="commencer_le_test">Commencer le test</string>
    <string name="quitter">Quitter</string>
    <string name="quel_gphy_est_tu">Quel Gphy est-tu ?</string>
    <string name="progression">Progression</string>
    <string name="gauche">Gauche</string>
    <string name="imageur">Imageur</string>
    <string name="physio">Physio</string>
    <string name="biotech">Biotech</string>
    <string name="stupide">Stupide</string>
    <string name="droite">Droite</string>
    <string name="le_java_pour_les_roi">Le java pour les roi</string>
    <string name="quelle_sont_vos_ue_pr_f_r_es">Quelle sont vos UE préférées ?</string>
    <string name="la_bdd_c_est_pour_les_pd">La BDD, c\'est pour les PD</string>
    <string name="physio_pour_les_prolo">Physio, pour les prolo</string>
    <string name="imagerie_les_sans_vie">Imagerie, les sans vie</string>
    <string name="la_mitbs_sors_tes_fesses">La MITBS, sors tes fesses</string>
    <string name="l_anglais_meh">L\'anglais, meh...</string>
    <string name="biotech_no_comment">Biotech, no comment</string>
    <string name="l_ihm_c_est_a_qu_on_aime">L\'IHM, c\'est ça qu\'on aime</string>
    <string name="la_coopoo_zetes_des_fous">La COOPOO, zetes des fous</string>
    <string name="activez_le_bouton_pour_comfirmer">Activez le bouton pour comfirmer</string>
    <string name="le_whisky_de_4h_du_mat">Le whisky de 4h du mat</string>
    <string name="tous_les_confin_s_sont_positifs">Tous les confinés sont positifs</string>
    <string name="choisie_la_bonne_conjugaison">Choisie la bonne conjugaison :</string>
    <string name="la_castel_du_plb">La castel du PLB</string>
    <string name="quelle_est_ta_boisson_f_tiche">Quelle est ta boisson fétiche :</string>
    <string name="le_beaujolais_nouveau">Le Beaujolais nouveau</string>
    <string name="le_th_de_la_cafet">Le thé de la cafet</string>
    <string name="toustes_les_confin_e_s_sont_postif_ve_s">Toustes les confiné.e.s sont postif.ve.s</string>
    <string name="tou_te_s_les_confin_es_sont_positif_ve_s">Tou(te)s les confiné(es) sont positif(ve)s</string>
    <string name="barre_de_progression">barre de progression</string>
    <string name="note_ton_amour_pour_la_coopoo">Note ton amour pour la COOPOO</string>
    <string name="resultats_complets">Resultats complets</string>
    <string name="score_biotech">Score biotech:</string>
    <string name="score_droite">Score droite:</string>
    <string name="score_imageur">Score imageur:</string>
    <string name="score_gauche">Score gauche:</string>
    <string name="score_stupide">Score stupide:</string>
    <string name="score_physio">Score physio:</string>
    <string name="textview">TextView</string>
    <string name="envoyer">Envoyer</string>
    <string name="e_mail">E-Mail</string>
    <string name="la_mitbs_c_est_la_hess">La MITBS, C\'est la hess</string>
    <string name="la_bdd_pour_les_f_l_s">La BDD, pour les félés</string>
    <string name="activer_le_bouton_pour_confirmer">Activer le bouton pour confirmer</string>
    <string name="pain_p_t">Pain pâté</string>
    <string name="de_quel_c_t_regarde_tu_avant_de_traverser">De quel côté regarde-tu avant de traverser?</string>
    <string name="choose_your_fighter">Choose your fighter :</string>
    <string name="patrick_g_char">Patrick Géchar</string>
    <string name="le_soir_au_d_ner_tu_es_plut_t">Le soir au dîner tu es plutôt :</string>
    <string name="dominique_tes_morts">Dominique Tes Morts</string>
    <string name="a_gauche">A gauche</string>
    <string name="grosse_raclette_sa_m_re">Grosse raclette sa mère</string>
    <string name="sexy_annie">Sexy Annie</string>
    <string name="p_tes_au_p_tes">Pâtes au pâtes</string>
    <string name="allanus">Allanus</string>
    <string name="a_droite">A droite</string>
    <string name="je_ne_regarde_pas_j_aime_le_danger">Je ne regarde pas, j\'aime le danger</string>
    <string name="test">Test</string>
    <string name="elephant_powa">Elephant POWA !!!!</string>
    <string name="ne_sous_estimer_pas_l_l_phant"><![CDATA[Ne sous-estimer pas l\'éléphant <(｀^´)>]]></string>
    <string name="plb_des_familles">PLB des familles</string>
    <string name="plut_t">Plutôt...</string>
    <string name="gros_resoi_chez_un_bro">Gros resoi chez un bro</string>
    <string name="vieux_wallaby_s_clat">Vieux Wallaby\'s éclaté</string>
    <string name="c_mor_je_go_reviser">C mor, je go reviser...</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="l_l_phant_est_plus_fort_que_le_rhinoc_ros">L\'éléphant est plus fort que le rhinocéros</string>
    <string name="adannie">Adannie</string>
    <string name="r_publique_dominicaine">République Dominicaine</string>
    <string name="allanis">Allanis</string>
    <string name="de_quel_sexe_tes_vous">De quel sexe êtes-vous?</string>
    <string name="le_java_pour_les_rois">Le java pour les rois</string>
    <string name="quelle_est_votre_langage_pr_f_r">Quelle est votre langage préféré</string>
    <string name="situez_vous">Situez vous</string>
    <string name="todo">todo</string>
    <string name="sql_donne_des_ailes">SQL donne des ailes</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="autres">Autres</string>
    <string name="consultez_vos_r_sultats_par_mail">Consultez vos résultats par mail :</string>
    <string name="suivant">Suivant</string>
    <string name="retour">Retour</string>
    <string name="le_c_tout_dans_l_anus">Le C ++ tout dans l\'anus</string>
    <string name="l_ada_on_est_l">L\'ada on est là</string>
</resources>