<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page4">

    <CheckBox
        android:id="@+id/checkBoxAnglais"
        android:layout_width="172dp"
        android:layout_height="30dp"
        android:fontFamily="@font/inconsolata"
        android:text="@string/l_anglais_meh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <CheckBox
        android:id="@+id/checkBoxPhysio"
        android:layout_width="172dp"
        android:layout_height="30dp"
        android:fontFamily="@font/inconsolata"
        android:text="@string/physio_pour_les_prolo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <CheckBox
        android:id="@+id/checkBoxImagerie"
        android:layout_width="172dp"
        android:layout_height="30dp"
        android:fontFamily="@font/inconsolata"
        android:text="@string/imagerie_les_sans_vie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <CheckBox
        android:id="@+id/checkBoxBiotech"
        android:layout_width="172dp"
        android:layout_height="30dp"
        android:fontFamily="@font/inconsolata"
        android:text="@string/biotech_no_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269" />

    <CheckBox
        android:id="@+id/checkBoxMITBS"
        android:layout_width="209dp"
        android:layout_height="31dp"
        android:fontFamily="@font/inconsolata"
        android:text="@string/la_mitbs_c_est_la_hess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311"
        tools:text="La MITBS, C'est la hess" />

    <CheckBox
        android:id="@+id/checkBoxBDD"
        android:layout_width="209dp"
        android:layout_height="31dp"
        android:fontFamily="@font/inconsolata"
        android:text="@string/la_bdd_pour_les_f_l_s"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222"
        tools:text="La BDD, pour les félés" />

    <CheckBox
        android:id="@+id/checkBoxCOOPOO"
        android:layout_width="209dp"
        android:layout_height="31dp"
        android:fontFamily="@font/inconsolata"
        android:text="@string/la_coopoo_zetes_des_fous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267" />

    <CheckBox
        android:id="@+id/checkBoxIHM"
        android:layout_width="209dp"
        android:layout_height="31dp"
        android:fontFamily="@font/inconsolata"
        android:text="@string/l_ihm_c_est_a_qu_on_aime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="387dp"
        android:layout_height="35dp"
        android:text="@string/plut_t"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="384dp"
        android:layout_height="60dp"
        android:fontFamily="@font/inconsolata"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451"
        tools:text="L'éléphant est plus fort que le rhinocéros" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inconsolata"
        android:text="@string/quelle_sont_vos_ue_pr_f_r_es"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="104dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="@drawable/gphy" />

    <Button
        android:id="@+id/btnNext4"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:onClick="onClickNext"
        android:text="@string/suivant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inconsolata"
        android:text="@string/barre_de_progression"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="263dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/btnBack4"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:onClick="onClickBack"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <Switch
        android:id="@+id/switchElephRhino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickElephant"
        android:textOff="@string/ne_sous_estimer_pas_l_l_phant"
        android:textOn="@string/elephant_powa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inconsolata"
        android:text="@string/activer_le_bouton_pour_confirmer"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514" />

    <RadioGroup
        android:layout_width="312dp"
        android:layout_height="157dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816">

        <RadioButton
            android:id="@+id/rbPLB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/plb_des_familles" />

        <RadioButton
            android:id="@+id/rbMaison"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gros_resoi_chez_un_bro" />

        <RadioButton
            android:id="@+id/rbWallaby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vieux_wallaby_s_clat" />

        <RadioButton
            android:id="@+id/rbRevision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_mor_je_go_reviser" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtViewSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

</androidx.constraintlayout.widget.ConstraintLayout>