<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_secondary"
    android:foregroundTint="@color/design_default_color_error"
    tools:context=".Page2">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="300dp"
        android:layout_height="27dp"
        android:text="@string/choisie_la_bonne_conjugaison"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="254dp"
        android:layout_height="21dp"
        android:background="@color/common_google_signin_btn_text_dark_pressed"
        android:backgroundTint="#593F3F"
        android:progressTint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barre_de_progression"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageView
        android:id="@+id/imageScore"
        android:layout_width="117dp"
        android:layout_height="114dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/gphy" />

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickPrevious"
        android:text="@string/retour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="27dp"
        android:text="@string/note_ton_amour_pour_la_coopoo"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="300dp"
        android:layout_height="27dp"
        android:text="@string/quelle_est_ta_boisson_f_tiche"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />

    <Button
        android:id="@+id/btnNext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/suivant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_on_secondary"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:foregroundTint="@color/design_default_color_background"
        android:isIndicator="false"
        android:outlineAmbientShadowColor="@color/design_default_color_background"
        android:outlineSpotShadowColor="@color/design_default_color_background"
        android:progressBackgroundTint="@color/design_default_color_background"
        android:progressTint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="290dp"
        android:layout_height="141dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <RadioButton
            android:id="@+id/theButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:buttonTint="@color/design_default_color_background"
            android:checked="true"
            android:text="@string/le_th_de_la_cafet"
            android:textColor="@color/design_default_color_background" />

        <RadioButton
            android:id="@+id/whiskyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:buttonTint="@color/design_default_color_background"
            android:text="@string/le_whisky_de_4h_du_mat"
            android:textColor="@color/design_default_color_background" />

        <RadioButton
            android:id="@+id/biereButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:buttonTint="@color/design_default_color_background"
            android:text="@string/la_castel_du_plb"
            android:textColor="@color/design_default_color_background" />

        <RadioButton
            android:id="@+id/vinButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:buttonTint="@color/design_default_color_background"
            android:text="@string/le_beaujolais_nouveau"
            android:textColor="@color/design_default_color_background" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="342dp"
        android:layout_height="119dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815">

        <RadioButton
            android:id="@+id/incluButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/design_default_color_background"
            android:checked="true"
            android:text="@string/toustes_les_confin_e_s_sont_postif_ve_s"
            android:textColor="@color/design_default_color_background" />

        <RadioButton
            android:id="@+id/mascuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/design_default_color_background"
            android:text="@string/tous_les_confin_s_sont_positifs"
            android:textColor="@color/design_default_color_background" />

        <RadioButton
            android:id="@+id/parenthButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/design_default_color_background"
            android:text="@string/tou_te_s_les_confin_es_sont_positif_ve_s"
            android:textColor="@color/design_default_color_background" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>